- fix styles for single-choice pickers with long titles; - add __empty css class to picker container element when nothing is selected or typed (i.e. for external styling); - disabled putting suggest text into input on mobile due to virtual keyboards specifics and bugs;

--- a/searchPicker.css
+++ b/searchPicker.css
@@ -136,6 +136,8 @@
 .search-picker ul.form-control li.search-choice.sole-choice span {
   padding-left:8px;
   line-height: 22px;
+  padding-right: 20px;
+  box-sizing: border-box;
 }
 
 .search-picker ul.form-control li.search-choice.sole-choice:focus,
